2003-08-21 Gustavo Niemeyer <niemeyer@conectiva.com>
        * modules/servercontrol.py: Allow setting the bot nick when
	  connecting.
	* modules/remoteinfo.py: Introduced "allow" concept, which
	  defines which channels/servers are allowed to "see" some
	  remoteinfo. Added 'c' flag to handle CTCP messages.
	* modules/messages.py: Prevent messages to the bot itself.
	  Fixed sending of messages when user talks directly to the
	  bot. Introduced command to ask for messages.

2003-08-19 Gustavo Niemeyer <niemeyer@conectiva.com>
	* modules/servercontrol.py: Minor typos fixed.
	* modules/log.py: Only allow log searching inside
	  the channel that the message has been typed.

2003-06-02 Gustavo Niemeyer <niemeyer@conectiva.com>
	* modules/remoteinfo.py: New module!

2003-05-30 Gustavo Niemeyer <niemeyer@conectiva.com>
	* server.py: If unable to transform string to ISO-8859-1, send
	  it in UTF8.

2003-05-29 Gustavo Niemeyer <niemeyer@conectiva.com>
	* modules/google.py: Introduced basic google module using the
	  google SOAP api.
	* pybot/util/SOAPpy: Added SOAPpy 0.10.1 to the source tree.

2003-05-16 Gustavo Niemeyer <niemeyer@conectiva.com>
	* contrib/vera2info.py: Updated to add multiple values in the
	  same key, when the keys are the same.
	* data/infopacks/vera.info: Updated to vera 1.9.

2003-05-12 Gustavo Niemeyer <niemeyer@conectiva.com>
	* *: Major work on pybot!!
	* modules/*: All modules moved to the new re matching system.
	* command.py: Removed old matching system.
	* modules/*: Pickling replaced by sqlite in all places were
	  persistence was needed.
	* modules/*: All modules have inline help.
	* modules/*: All modules have permission help.
	* modules/infopack.py: Infopacks have help now.
	* *: Many method names changed to a better alternative.
	* options.py: Removed soft/hard relation. Now there's a single
	  dict that might resist to reboots, if necessary. Notice that
	  no standard module uses it for persistent options, since they
	  use sqlite.