@@ -1,3 +1,8 @@
+2003-08-22 Gustavo Niemeyer <niemeyer@conectiva.com>
+        * modules/servercontrol.py: Implemented arbitrary setup of
+	  after-connection messages, allowing nick registration on
+	  nickserv and similars.
+
 2003-08-21 Gustavo Niemeyer <niemeyer@conectiva.com>
         * modules/servercontrol.py: Allow setting the bot nick when
 	  connecting.
